add more details for about page

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -7,6 +7,7 @@
 </head>
 {{>header}}
         <h1>{{title}}</h1>
+        <p>This site is created by Tuan Anh Ha.</p>
         <img src="../img/pig.jpg" alt="Pig">
 {{>footer}}
 </body>
